[tool.poetry]
name = "cheatsheet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.2.0"
streamlit-player = "^0.1.5"
streamlit-webrtc = "^0.32.0"

[tool.poetshary.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
